headers/phonon.h


    /*****************************************************************************************************************/
    /* Data Types                                                                                                    */
    /*****************************************************************************************************************/

    /** \defgroup types Data Types
     *  Common data types used throughout the Phonon API.
     *  \{ */

    typedef void                IPLvoid;            /**< Equivalent to \c void. */

    typedef int                 IPLint32;           /**< Signed 32-bit integer. */

    typedef float               IPLfloat32;         /**< Single-precision floating-point number. */


    /** An opaque handle to a Phonon API object. A variable of this type may not be cast to a pointer to any other
      * API type. */
    typedef void*               IPLhandle;


    /** Status codes returned by Phonon API functions. */
    typedef enum {
        IPL_STATUS_SUCCESS,         /**< The operation completed successfully. */
        IPL_STATUS_FAILURE,         /**< An unspecified error occurred. */
        IPL_STATUS_OUTOFMEMORY,     /**< The system ran out of memory. */
        IPL_STATUS_INITIALIZATION   /**< An error occurred while initializing an external dependency. */
    } IPLerror;


    /** A unit-length quaternion. Quaternions are used to represent a rotation or orientation.
     */
    typedef struct {
        IPLfloat32 x;   /**< The x-coordinate of the vector part. */
        IPLfloat32 y;   /**< The y-coordinate of the vector part. */
        IPLfloat32 z;   /**< The z-coordinate of the vector part. */
        IPLfloat32 w;   /**< The scalar part. */
    } IPLQuaternion;


    /** The format of an audio buffer. Whenever you pass audio data to or from Phonon, you must describe the format in
     *  which the audio is encoded. **Phonon only supports uncompressed PCM wave data, stored in 32-bit floating point
     *  format**. However, Phonon supports many different multi-channel and Ambisonics formats, and the
     *  \c IPLAudioFormat tells Phonon how to interpret a buffer of audio data.
     */
    typedef struct {
        IPLChannelLayoutType        channelLayoutType;          /**< Indicates whether or not the audio should be
                                                                     interpreted as Ambisonics data. */
        IPLChannelLayout            channelLayout;              /**< Specifies the speaker configuration used for
                                                                     multi-channel, speaker-based audio data. Ignored
                                                                     if \c channelLayoutType is
                                                                     \c ::IPL_CHANNELLAYOUTTYPE_AMBISONICS. */
        IPLint32                    numSpeakers;                /**< The number of channels in the audio data. Only
                                                                     used if \c channelLayoutType is 
                                                                     \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS and
                                                                     \c channelLayout is
                                                                     \c ::IPL_CHANNELLAYOUT_CUSTOM. */
        IPLVector3*                 speakerDirections;          /**< An array of \c IPLVector3 objects indicating the
                                                                     direction of each speaker relative to the user.
                                                                     Can be \c NULL. Only used if \c channelLayoutType
                                                                     is \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS and
                                                                     \c channelLayout is
                                                                     \c ::IPL_CHANNELLAYOUT_CUSTOM. */
        IPLint32                    ambisonicsOrder;            /**< The order of Ambisonics to use. Must be between 0
                                                                     and 3. Ignored if \c channelLayoutType is
                                                                     \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS. */
        IPLAmbisonicsOrdering       ambisonicsOrdering;         /**< The ordering of Ambisonics channels within the
                                                                     data. Ignored if \c channelLayoutType is
                                                                     \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS. */
        IPLAmbisonicsNormalization  ambisonicsNormalization;    /**< The normalization scheme used for Ambisonics
                                                                     data. Ignored if \c channelLayoutType is
                                                                     \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS. */
        IPLChannelOrder             channelOrder;               /**< Whether the audio data is interleaved or
                                                                     deinterleaved. */
    } IPLAudioFormat;


    /** A buffer containing audio data. All audio data passed to or from Phonon must be packaged in \c IPLAudioBuffer
     *  objects, which describe the format and size of the audio data.
     */
    typedef struct {
        IPLAudioFormat  format;                 /**< The format of the audio data. */
        IPLint32        numSamples;             /**< The number of samples in the audio buffer. The total number of
                                                     elements in the audio buffer is equal to \c numSamples *
                                                     \c format.numSpeakers. */
        IPLfloat32*     interleavedBuffer;      /**< A pointer to a contiguous block of memory containing interleaved
                                                     audio data in the format described by \c format. Can be \c NULL
                                                     if \c format.channelOrder is \c ::IPL_CHANNELORDER_DEINTERLEAVED. */
        IPLfloat32**    deinterleavedBuffer;    /**< A pointer to an array of pointers, each of which points to a block
                                                     of memory containing audio data for a single channel of audio data
                                                     in the format described by \c format. In other words,
                                                     deinterleaved audio data doesn't have to be stored contiguously
                                                     in memory. Can be \c NULL if \c format.channelOrder is
                                                     \c ::IPL_CHANNELORDER_INTERLEAVED. */
    } IPLAudioBuffer;


    /** Mixes a set of audio buffers.  This is primarily useful for mixing the output of multiple Panning Effect
     *  objects, before passing them to a single Virtual Surround Effect or a single Ambisonics Binaural Effect. This
     *  way, applications can significantly accelerate 3D audio rendering for large numbers of sources.
     *
     *  \param  numBuffers          The number of input buffers to mix. Must be greater than 0.
     *  \param  inputAudio          Array of audio buffers to mix. All of these audio buffers must have identical
     *                              formats.
     *  \param  outputAudio         Audio buffer that will contain the mixed audio data. The format of this buffer
     *                              must be identical to all buffers contained in \c inputAudio.
     */
    IPLAPI IPLvoid iplMixAudioBuffers(IPLint32 numBuffers, IPLAudioBuffer* inputAudio, IPLAudioBuffer outputAudio);


    /** Interleaves a deinterleaved audio buffer. The formats of \c inputAudio and \c outputAudio must be identical
     *  except for the \c channelOrder field.
     *
     *  \param  inputAudio          The input audio buffer. This audio buffer must be deinterleaved.
     *  \param  outputAudio         The output audio buffer. This audio buffer must be interleaved.
     */
    IPLAPI IPLvoid iplInterleaveAudioBuffer(IPLAudioBuffer inputAudio, IPLAudioBuffer outputAudio);


    /** Deinterleaves an interleaved audio buffer. The formats of \c inputAudio and \c outputAudio must be identical
     *  except for the \c channelOrder field.
     *
     *  \param  inputAudio          The input audio buffer. This audio buffer must be interleaved.
     *  \param  outputAudio         The output audio buffer. This audio buffer must be deinterleaved.
     */
    IPLAPI IPLvoid iplDeinterleaveAudioBuffer(IPLAudioBuffer inputAudio, IPLAudioBuffer outputAudio);


    /** Converts the format of an audio buffer into the format of the output audio buffer. This is primarily useful
     *  for 360 video and audio authoring workflows. The following format conversions are supported:
     *
     *  - mono to multi-channel speaker-based formats (stereo, quadraphonic, 5.1, 7.1)
     *  - multi-channel speaker-based (stereo, quadraphonic, 5.1, 7.1) to mono
     *  - stereo to 5.1 or 7.1
     *  - Ambisonics to multi-channel speaker-based (mono, stereo, quadraphonic, 5.1, 7.1)
     *
     *  \param  inputAudio          The input audio buffer.
     *  \param  outputAudio         The output audio buffer.
     */
    IPLAPI IPLvoid iplConvertAudioBufferFormat(IPLAudioBuffer inputAudio, IPLAudioBuffer outputAudio);


    /** Creates an Ambisonics Rotator object. An Ambisonics Rotator object is used to apply an arbitrary rotation to
     *  audio data encoded in Ambisonics. This is primarily useful in the following situations:
     *
     *  - If you have an Ambisonics audio buffer whose coefficients are defined relative to world space coordinates,
     *    you can convert them to listener space using an Ambisonics Rotator object. This is necessary when using a
     *    Convolution Effect object, since its output is defined in world space, and will not change if the listener
     *    looks around.
     *
     *  - If your final mix is encoded in Ambisonics, and the user is using headphones with head tracking, you can use
     *    the Ambisonics Rotator object to make the sound field stay "in place" as the user looks around in the real
     *    world. This is achieved by using the Ambisonics Rotator object to apply the inverse of the user's rotation
     *    to the final mix.
     *
     *  \param  context             The Context object used by the audio engine.
     *  \param  order               The order of the Ambisonics data to rotate.
     *  \param  rotator             [out] Handle to the created Ambisonics Rotator object.
     *
     *  \return Status code indicating whether or not the operation succeeded.
     */
    IPLAPI IPLerror iplCreateAmbisonicsRotator(IPLhandle context, IPLint32 order, IPLhandle* rotator);


    /** Destroys an Ambisonics Rotator object.
     *
     *  \param  rotator             [in, out] Address of a handle to the Ambisonics Rotator object to destroy.
     */
    IPLAPI IPLvoid iplDestroyAmbisonicsRotator(IPLhandle* rotator);


    /** Specifies a rotation value. This function must be called before using \c ::iplRotateAmbisonicsAudioBuffer to
     *  rotate an Ambisonics-encoded audio buffer, or the resulting audio will be incorrect.
     *
     *  \param  rotator             Handle to an Ambisonics Rotator object.
     *  \param  quaternion          A unit quaternion describing the 3D transformation from world space to listener
     *                              space coordinates.
     */
    IPLAPI IPLvoid iplSetAmbisonicsRotation(IPLhandle rotator, IPLQuaternion quaternion);


    /** Rotates an Ambisonics-encoded audio buffer. The \c ::iplSetAmbisonicsRotation function must have been called
     *  prior to calling this function, or the resulting audio will be incorrect. It is possible to pass the same
     *  value for \c inputAudio and \c outputAudio. This results in in-place rotation of the Ambisonics data.
     *
     *  \param  rotator             Handle to an Ambisonics Rotator object.
     *  \param  inputAudio          Audio buffer containing the Ambisonics-encoded data that is to be rotated. The
     *                              format of this buffer must be Ambisonics.
     *  \param  outputAudio         Audio buffer containing the rotated Ambisonics-encoded data. The format of this
     *                              buffer must be Ambisonics.
     */
    IPLAPI IPLvoid iplRotateAmbisonicsAudioBuffer(IPLhandle rotator, IPLAudioBuffer inputAudio,
        IPLAudioBuffer outputAudio);


    /** \} */


    /*****************************************************************************************************************/
    /* Binaural Renderer                                                                                             */
    /*****************************************************************************************************************/

    /** \defgroup binauralrenderer Binaural Renderer
     *  Functions for managing a Binaural Renderer object. Before creating any effect objects that perform
     *  spatialization or binaural rendering, you must create a Binaural Renderer object. This object describes global
     *  settings and audio pipeline parameters that will be used by all spatialization and binaural
     *  rendering effect objects.
     *  \{
     */

    /** The type of HRTF database to use for binaural rendering. You can either use the built-in HRTF database, or
     *  supply your own HRTF data at run-time.
     */
    typedef enum {
        IPL_HRTFDATABASETYPE_DEFAULT,   /**< The built-in HRTF database. */
        IPL_HRTFDATABASETYPE_CUSTOM     /**< Indicates that your application will supply HRTF data of its own at
                                             run-time. For this to work, you must implement the necessary HRTF database
                                             callbacks described in this section. */
    } IPLHrtfDatabaseType;


    /** A single-precision complex number.
     */
    typedef struct {
        IPLfloat32 real;    /**< The real part. */
        IPLfloat32 imag;    /**< The imaginary part. */
    } IPLComplex;