src/bindgen.rs

#[test]
fn bindgen_test_layout_IPLAudioBuffer() {
    assert_eq!(
        ::std::mem::size_of::<IPLAudioBuffer>(),
        64usize,
        concat!("Size of: ", stringify!(IPLAudioBuffer))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLAudioBuffer>(),
        8usize,
        concat!("Alignment of ", stringify!(IPLAudioBuffer))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioBuffer>())).format as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioBuffer),
            "::",
            stringify!(format)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioBuffer>())).numSamples as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioBuffer),
            "::",
            stringify!(numSamples)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioBuffer>())).interleavedBuffer as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioBuffer),
            "::",
            stringify!(interleavedBuffer)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioBuffer>())).deinterleavedBuffer as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioBuffer),
            "::",
            stringify!(deinterleavedBuffer)
        )
    );
}
extern "C" {
    /// Mixes a set of audio buffers.  This is primarily useful for mixing the output of multiple Panning Effect
    /// objects, before passing them to a single Virtual Surround Effect or a single Ambisonics Binaural Effect. This
    /// way, applications can significantly accelerate 3D audio rendering for large numbers of sources.
    ///
    /// \param  numBuffers          The number of input buffers to mix. Must be greater than 0.
    /// \param  inputAudio          Array of audio buffers to mix. All of these audio buffers must have identical
    /// formats.
    /// \param  outputAudio         Audio buffer that will contain the mixed audio data. The format of this buffer
    /// must be identical to all buffers contained in \c inputAudio.
    pub fn iplMixAudioBuffers(
        numBuffers: IPLint32,
        inputAudio: *mut IPLAudioBuffer,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
extern "C" {
    /// Interleaves a deinterleaved audio buffer. The formats of \c inputAudio and \c outputAudio must be identical
    /// except for the \c channelOrder field.
    ///
    /// \param  inputAudio          The input audio buffer. This audio buffer must be deinterleaved.
    /// \param  outputAudio         The output audio buffer. This audio buffer must be interleaved.
    pub fn iplInterleaveAudioBuffer(
        inputAudio: IPLAudioBuffer,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
extern "C" {
    /// Deinterleaves an interleaved audio buffer. The formats of \c inputAudio and \c outputAudio must be identical
    /// except for the \c channelOrder field.
    ///
    /// \param  inputAudio          The input audio buffer. This audio buffer must be interleaved.
    /// \param  outputAudio         The output audio buffer. This audio buffer must be deinterleaved.
    pub fn iplDeinterleaveAudioBuffer(
        inputAudio: IPLAudioBuffer,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
extern "C" {
    /// Converts the format of an audio buffer into the format of the output audio buffer. This is primarily useful
    /// for 360 video and audio authoring workflows. The following format conversions are supported:
    ///
    /// - mono to multi-channel speaker-based formats (stereo, quadraphonic, 5.1, 7.1)
    /// - multi-channel speaker-based (stereo, quadraphonic, 5.1, 7.1) to mono
    /// - stereo to 5.1 or 7.1
    /// - Ambisonics to multi-channel speaker-based (mono, stereo, quadraphonic, 5.1, 7.1)
    ///
    /// \param  inputAudio          The input audio buffer.
    /// \param  outputAudio         The output audio buffer.
    pub fn iplConvertAudioBufferFormat(
        inputAudio: IPLAudioBuffer,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
extern "C" {
    /// Creates an Ambisonics Rotator object. An Ambisonics Rotator object is used to apply an arbitrary rotation to
    /// audio data encoded in Ambisonics. This is primarily useful in the following situations:
    ///
    /// - If you have an Ambisonics audio buffer whose coefficients are defined relative to world space coordinates,
    /// you can convert them to listener space using an Ambisonics Rotator object. This is necessary when using a
    /// Convolution Effect object, since its output is defined in world space, and will not change if the listener
    /// looks around.
    ///
    /// - If your final mix is encoded in Ambisonics, and the user is using headphones with head tracking, you can use
    /// the Ambisonics Rotator object to make the sound field stay "in place" as the user looks around in the real
    /// world. This is achieved by using the Ambisonics Rotator object to apply the inverse of the user's rotation
    /// to the final mix.
    ///
    /// \param  context             The Context object used by the audio engine.
    /// \param  order               The order of the Ambisonics data to rotate.
    /// \param  rotator             [out] Handle to the created Ambisonics Rotator object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateAmbisonicsRotator(
        context: IPLhandle,
        order: IPLint32,
        rotator: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys an Ambisonics Rotator object.
    ///
    /// \param  rotator             [in, out] Address of a handle to the Ambisonics Rotator object to destroy.
    pub fn iplDestroyAmbisonicsRotator(rotator: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Specifies a rotation value. This function must be called before using \c ::iplRotateAmbisonicsAudioBuffer to
    /// rotate an Ambisonics-encoded audio buffer, or the resulting audio will be incorrect.
    ///
    /// \param  rotator             Handle to an Ambisonics Rotator object.
    /// \param  quaternion          A unit quaternion describing the 3D transformation from world space to listener
    /// space coordinates.
    pub fn iplSetAmbisonicsRotation(rotator: IPLhandle, quaternion: IPLQuaternion) -> IPLvoid;
}
extern "C" {
    /// Rotates an Ambisonics-encoded audio buffer. The \c ::iplSetAmbisonicsRotation function must have been called
    /// prior to calling this function, or the resulting audio will be incorrect. It is possible to pass the same
    /// value for \c inputAudio and \c outputAudio. This results in in-place rotation of the Ambisonics data.
    ///
    /// \param  rotator             Handle to an Ambisonics Rotator object.
    /// \param  inputAudio          Audio buffer containing the Ambisonics-encoded data that is to be rotated. The
    /// format of this buffer must be Ambisonics.
    /// \param  outputAudio         Audio buffer containing the rotated Ambisonics-encoded data. The format of this
    /// buffer must be Ambisonics.
    pub fn iplRotateAmbisonicsAudioBuffer(
        rotator: IPLhandle,
        inputAudio: IPLAudioBuffer,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
pub const IPLHrtfDatabaseType_IPL_HRTFDATABASETYPE_DEFAULT: IPLHrtfDatabaseType = 0;
pub const IPLHrtfDatabaseType_IPL_HRTFDATABASETYPE_CUSTOM: IPLHrtfDatabaseType = 1;
pub type IPLHrtfDatabaseType = u32;
/// A single-precision complex number.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLComplex {
    /// < The real part.
    pub real: IPLfloat32,
    /// < The imaginary part.
    pub imag: IPLfloat32,
}
#[test]
fn bindgen_test_layout_IPLComplex() {
    assert_eq!(
        ::std::mem::size_of::<IPLComplex>(),
        8usize,
        concat!("Size of: ", stringify!(IPLComplex))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLComplex>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLComplex))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLComplex>())).real as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLComplex),
            "::",
            stringify!(real)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLComplex>())).imag as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLComplex),
            "::",
            stringify!(imag)
        )
    );
}
